compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_nat-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 13
expression: "const v0 : nat2 := -1\nconst v1 : nat2 := 0\nconst v2 : nat2 := 16#ffff\nconst v3 : nat2 := 16#10000\nconst _ := v0\nconst _ := v1\nconst _ := v2\nconst _ := v3\n"

---
"v0"@(FileId(1), 6..8) -> Integer(ConstInt { magnitude: 1, sign: Negative, width: As32 })
"v1"@(FileId(1), 28..30) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"v2"@(FileId(1), 49..51) -> Integer(ConstInt { magnitude: 65535, sign: Positive, width: As32 })
"v3"@(FileId(1), 76..78) -> Integer(ConstInt { magnitude: 65536, sign: Positive, width: As32 })
"_"@(FileId(1), 104..105) -> ConstError { kind: OutsideRange, span: (FileId(1), 19..21) }
"_"@(FileId(1), 118..119) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"_"@(FileId(1), 132..133) -> Integer(ConstInt { magnitude: 65535, sign: Positive, width: As32 })
"_"@(FileId(1), 146..147) -> ConstError { kind: OutsideRange, span: (FileId(1), 89..97) }

error in file FileId(1) at 19..21: value is outside of the type's range
error in file FileId(1) at 89..97: value is outside of the type's range

