compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_nat-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 13
expression: "const v0 : nat4 := -1\nconst v1 : nat4 := 0\nconst v2 : nat4 := 16#ffffffff\n%const v3 : nat4 := 16#100000000\nconst _ := v0\nconst _ := v1\nconst _ := v2\n%const _ := v3\n"

---
"v0"@(FileId(1), 6..8) -> Integer(ConstInt { magnitude: 1, sign: Negative, width: As32 })
"v1"@(FileId(1), 28..30) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"v2"@(FileId(1), 49..51) -> Integer(ConstInt { magnitude: 4294967295, sign: Positive, width: As32 })
"_"@(FileId(1), 113..114) -> ConstError { kind: OutsideRange, span: (FileId(1), 19..21) }
"_"@(FileId(1), 127..128) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"_"@(FileId(1), 141..142) -> Integer(ConstInt { magnitude: 4294967295, sign: Positive, width: As32 })

error in file FileId(1) at 19..21: cannot compute expression at compile-time
| error in file FileId(1) for 19..21: value is outside of the type's range

