compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_nat-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 13
expression: "const v0 : nat := -1\nconst v1 : nat := 0\nconst v2 : nat := 16#fffffffe\nconst v3 : nat := 16#ffffffff\nconst _ := v0\nconst _ := v1\nconst _ := v2\nconst _ := v3\n"

---
"v0"@(FileId(1), 6..8) -> Integer(ConstInt { magnitude: 1, sign: Negative, width: As32 })
"v1"@(FileId(1), 27..29) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"v2"@(FileId(1), 47..49) -> Integer(ConstInt { magnitude: 4294967294, sign: Positive, width: As32 })
"v3"@(FileId(1), 77..79) -> Integer(ConstInt { magnitude: 4294967295, sign: Positive, width: As32 })
"_"@(FileId(1), 107..108) -> ConstError { kind: OutsideRange, span: (FileId(1), 18..20) }
"_"@(FileId(1), 121..122) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"_"@(FileId(1), 135..136) -> Integer(ConstInt { magnitude: 4294967294, sign: Positive, width: As32 })
"_"@(FileId(1), 149..150) -> ConstError { kind: OutsideRange, span: (FileId(1), 89..100) }

error in file FileId(1) at 18..20: cannot compute expression at compile-time
| error in file FileId(1) for 18..20: value is outside of the type's range
error in file FileId(1) at 89..100: cannot compute expression at compile-time
| error in file FileId(1) for 89..100: value is outside of the type's range

