compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_nat-5.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 13
expression: "const v0 : addressint := -1\nconst v1 : addressint := 0\nconst v2 : addressint := 16#ffffffff\n%const v3 : addressint := 16#100000000\nconst _ := v0\nconst _ := v1\nconst _ := v2\n%const _ := v3\n"

---
"v0"@(FileId(1), 6..8) -> Integer(ConstInt { magnitude: 1, sign: Negative, width: As32 })
"v1"@(FileId(1), 34..36) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"v2"@(FileId(1), 61..63) -> Integer(ConstInt { magnitude: 4294967295, sign: Positive, width: As32 })
"_"@(FileId(1), 137..138) -> ConstError { kind: OutsideRange, span: (FileId(1), 25..27) }
"_"@(FileId(1), 151..152) -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })
"_"@(FileId(1), 165..166) -> Integer(ConstInt { magnitude: 4294967295, sign: Positive, width: As32 })

error in file FileId(1) at 25..27: value is outside of the type's range

