compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_propagation.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a := 1 div 0\nconst b := a\n"

---
"a"@(FileId(1), 6..7) -> ConstError { kind: DivByZero, span: (FileId(1), 13..16) }
"b"@(FileId(1), 25..26) -> ConstError { kind: DivByZero, span: (FileId(1), 13..16) }

error in file FileId(1) at 13..16: division by zero in compile-time expression

