compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_propogation.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a := 1 div 0\nconst b := a\n"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..18, state: Error(ConstError { kind: DivByZero, span: 13..16 }) },
                EvalInfo { unit_id: UnitId(0), span: 30..31, state: Error(ConstError { kind: Reported, span: 30..31 }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
                GlobalDefId(UnitId(0), DefId(1)): ConstExpr { id: 1 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: DivByZero, span: 13..16 }
ConstExpr { id: 1 } -> ConstError { kind: Reported, span: 30..31 }

error at 13..16: division by zero in compile-time expression

