compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-1e308 + (-1e308)"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_state: [
                Error(Spanned(RealOverflow, 18..19)),
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
